--- a/src/app.css
+++ b/src/app.css
@@ -2,11 +2,17 @@ html, body {
 	width: 100%;
 }
 
-html, #app-root {
+html, .app-root {
 	height: 100%;
 }
 
 body {
 	height: 100%;
 	margin: 0
+}
+
+.main {
+	display: flex;
+	flex-flow: column;
+	height: 100%;
 }
